--- a/index.html
+++ b/index.html
@@ -74,16 +74,23 @@
        
 
 <!-- Body --> 
-        <body>
+      <body>
+        <section class="Hebergements">
             <!-- Hébergements-->
             <h2 id="Hébergements">Hébergements</h2>
+      </section>  
+      
+        <section class="populaires">
             <!-- Les plus populaires-->
             <h2 id="Les plus populaires">Les plus populaires</h2>
+        </section> 
+
+        <section class="Activites">  
             <!-- Activités-->
             <h2 id="#Activités">Activités</h2>
+        </section>
 
-
-        </body>
+      </body>
 
 <!-- Footer-->
         <footer class="footer">
