Rajout option telephone header

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <header class="header">
             <image class="BookiLogo" src="images/logo/Booki.png" alt="Logo Booki" />
             <nav class="headerHostAct">
-              <a class="headerHostActButton" href="#hosting" data-active="true">Hébergement</a>
-              <a class="headerHostActButton" href="#activity" data-active="false">Activités</a>
+              <a class="headerHostActButton" href="#Hébergements">Hébergement</a>
+              <a class="headerHostActButton" href="#Activités">Activités</a>
             </nav>
             <br/>
         </header>
@@ -75,17 +75,17 @@
 
 <!-- Body --> 
       <body>
-        <section class="Hebergements">
+        <section class="Hébergements">
             <!-- Hébergements-->
             <h2 id="Hébergements">Hébergements</h2>
       </section>  
-      
+
         <section class="populaires">
             <!-- Les plus populaires-->
             <h2 id="Les plus populaires">Les plus populaires</h2>
         </section> 
 
-        <section class="Activites">  
+        <section class="Activités">  
             <!-- Activités-->
             <h2 id="#Activités">Activités</h2>
         </section>
