--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <!-- HEADER -->
         <header class="header">
-            <image class="BookiLogo" src="images/logo/Booki.png" alt="Logo Booki" />
+            <image class="BookiLogo" src="Images/logo/Booki.png" alt="Logo Booki" />
             <nav class="headerHostAct">
               <a class="headerHostActButton" href="#Hébergements">Hébergement</a>
               <a class="headerHostActButton" href="#Activités">Activités</a>
