Bouton recherche validé

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
 
 <!-- Titre -->          
-    <section class="Titre">
+    <section class="titre">
         <h1 class="H1Titre">Trouvez votre hébergement pour des vacances de rêve</h1>
         <p class="PTitre">En plein centre ville ou en pleine nature</p>
     </section>
@@ -41,15 +41,20 @@
         </span>
                       
         <input class="searchtext" type="search" placeholder="Marseille, France" size="25" />
-           <button class="searchbutton">
+
+          <button class="searchbutton">
+            <div class="searchbuttonText">
               <span class="searchbutton">Rechercher</span>
+            </div>
+            <div class="searchbuttonIcon">
               <i class="searchFormSubmitinputIcon fas fa-search"></i>
-            </button>
+            </div>
+          </button>
       </form>
     </section>
 
 <!-- Filtre -->                    
-    <section class="Filtre">      
+    <section class="filtre">      
       <div class="searchFilters">
 
         <h2 class="searchFiltersTitle">Filtres</h2>
@@ -86,7 +91,7 @@
       </section>
 
 <!-- Text Info -->      
-      <section class="TextInfo">
+      <section class="textInfo">
           <div class="TextInfoIcon">
             <i class="fa-solid fa-circle-info" style="color:#0065FC"></i> Plus de 500 logements sont disponibles dans cette ville</i>
           </div>     
