--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
   <html>
-    <title> Projet Booki </title>
+  <head></head>  
+  <title> Projet Booki </title>
       <script src="https://kit.fontawesome.com/f2e3363b96.js" crossorigin="anonymous"></script>
       <meta charset="utf-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <link rel="stylesheet" href="style.css" />
-
+  </head> 
 <!-- HEADER -->
     <header class="header">
       <section class="bookiDivLogo">
@@ -122,7 +123,7 @@
 
 <!-- Footer-->
     <footer class="footer">
-
+      
 
             
     </footer>
