Ajustement CSS - HTML

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
              <h2><i class="fas fa-star etoileIcon"></i></h2> 
             </div>
           </header>
-          <article class="hébergementsFiche">
+          <article class="hébergementsPopulairesFiche">
             <a href="#">
              <figure class="hébergementsPopulairesFiche">
               <div class="hébergementsPopulairesFicheContenuBox">
@@ -295,7 +295,7 @@
                 </figure>
               </a>
             </article>
-          <article class="hébergementsFiche">
+          <article class="hébergementsPopulairesFiche">
             <a href="#">
              <figure class="hébergementsPopulairesFiche">
               <div class="hébergementsPopulairesFicheContenuBox">
@@ -321,7 +321,7 @@
               </a>
             </article>
 
-          <article class="hébergementsFiche">
+          <article class="hébergementsPopulairesFiche">
             <a href="#">
              <figure class="hébergementsPopulairesFiche">
               <div class="hébergementsPopulairesFicheContenuBox">
