Ajout Footer + Finalisation Hébergements

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 <!-- Body --> 
    
  <!-- Hébergements-->
- <section id="hebergement" class="hebergement">
+ <section id="#Hébergements" class="hebergement">
   <div class="marseille">
       <div class="container">
           <h2 class="titre2">Hébergements à Marseille</h2>
@@ -117,7 +117,7 @@
                       <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="auberge La Canebiere" title="Auberge La Canebière" class="photo">
                       <div class="contenue">
                           <h3 class="titre3">Auberge La Canebière</h3>
-                          <p class="paragraphe">Nuit à partir de 25<span class="euro">€</span></p>
+                          <p class="paragraphe">Nuit à partir de <strong> 25 €</strong></p>
                           <div class="etoile">
                               <i class="fas fa-star icon" data-active="true"></i>
                               <i class="fas fa-star icon" data-active="true"></i>
@@ -133,7 +133,7 @@
                       <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="hotel du port" title="Hôtel du port" class="photo">
                       <div class="contenue">
                           <h3 class="titre3">Hôtel du port</h3>
-                          <p class="paragraphe">Nuit à partir de 52<span class="euro">€</span></p>
+                          <p class="paragraphe">Nuit à partir de <strong> 52 €</strong></p>
                           <div class="etoile">
                               <i class="fas fa-star icon" data-active="true"></i>
                               <i class="fas fa-star icon" data-active="true"></i>
@@ -149,7 +149,7 @@
                       <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="hotel Les mouettes" title="Hôtel Les mouettes" class="photo">
                       <div class="contenue">
                           <h3 class="titre3">Hôtel Les mouettes</h3>
-                          <p class="paragraphe">Nuit à partir de 76<span class="euro">€</span></p>
+                          <p class="paragraphe">Nuit à partir de <strong> 76 €</strong></p>
                           <div class="etoile">
                               <i class="fas fa-star icon" data-active="true"></i>
                               <i class="fas fa-star icon" data-active="true"></i>
@@ -165,7 +165,7 @@
                       <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="hotel de la mer" title="Hôtel de la mer" class="photo">
                       <div class="contenue">
                           <h3 class="titre3">Hôtel de la mer</h3>
-                          <p class="paragraphe">Nuit à partir de 46<span class="euro">€</span></p>
+                          <p class="paragraphe">Nuit à partir de <strong> 46 €</strong></p>
                           <div class="etoile">
                               <i class="fas fa-star icon" data-active="true"></i>
                               <i class="fas fa-star icon" data-active="true"></i>
@@ -181,7 +181,7 @@
                       <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="auberge le panier" title="Auberge Le Panier" class="photo">
                       <div class="contenue">
                           <h3 class="titre3">Auberge Le Panier</h3>
-                          <p class="paragraphe">Nuit à partir de 23<span class="euro">€</span></p>
+                          <p class="paragraphe">Nuit à partir de <strong> 23 €</strong></p>
                           <div class="etoile">
                               <i class="fas fa-star icon" data-active="true"></i>
                               <i class="fas fa-star icon" data-active="true"></i>
@@ -197,7 +197,7 @@
                       <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="hotel chez amina" title="Hôtel Chez Amina" class="photo">
                       <div class="contenue">
                           <h3 class="titre3">Hôtel Chez Amina</h3>
-                          <p class="paragraphe">Nuit à partir de 96<span class="euro">€</span></p>
+                          <p class="paragraphe">Nuit à partir de <strong> 96 €</strong></p>
                           <div class="etoile">
                               <i class="fas fa-star icon" data-active="true"></i>
                               <i class="fas fa-star icon" data-active="true"></i>
@@ -224,7 +224,7 @@
                       <div class="carton">
                           <div class="contenue">
                               <h3 class="titre3">Hôtel Le soleil du matin</h3>
-                              <p class="paragraphe">Nuit à partir de 128<span class="euro">€</span></p>
+                              <p class="paragraphe">Nuit à partir de <strong> 128 €</strong></p>
                           </div>
                           <div class="etoile">
                               <i class="fas fa-star icon" data-active="true"></i>
@@ -244,7 +244,7 @@
                       <div class="carton">
                           <div class="contenue">
                               <h3 class="titre3">Chambres d’hôtes Au cœur de l’eau</h3>
-                              <p class="paragraphe">Nuit à partir de 71<span class="euro">€</span></p>
+                              <p class="paragraphe">Nuit à partir de <strong> 71 €</strong></p>
                           </div>
                           <div class="etoile">
                               <i class="fas fa-star icon" data-active="true"></i>
@@ -262,7 +262,7 @@
                       <div class="carton">
                           <div class="contenue">
                               <h3 class="titre3">Hôtel Bleu et Blanc</h3>
-                              <p class="paragraphe">Nuit à partir de 68<span class="euro">€</span></p>
+                              <p class="paragraphe">Nuit à partir de <strong> 68 €</strong></p>
                           </div>    
                           <div class="etoile">
                               <i class="fas fa-star icon" data-active="true"></i>
@@ -284,15 +284,53 @@
 <!-- Activités-->      
       <section class="Activités" id="Activités">  
             
-            <h2 id="#Activités">Activités</h2>
+            <h2 id="#Activités">Activités à Marseille</h2>
       </section>
 
    
 
 <!-- Footer-->
 <footer class="footer">
-  
-</footer>
+
+    <div class="colonne">
+        <h3 class="titre">A propos</h3>
+        <ul>
+            <li>
+                <p class="lien"><a href="#">Fonctionnement du site</a></p>
+            </li>
+            <li>
+                <p class="lien"><a href="#">Conditions générales</a></p>
+            </li>
+            <li>
+                <p class="lien"><a href="#">Données et confidentialité</a></p>
+            </li>
+        </ul>
+    </div>
+    <div class="colonne">
+        <h3 class="titre">Nos hébergements</h3>
+        <ul>
+            <li>
+                <p class="lien"><a href="#">Charte qualité</a></p>
+            </li>
+            <li>
+                <p class="lien"><a href="#">Proposer votre hôtel</a></p>
+            </li>
+        </ul>
+    </div>
+    <div class="colonne">
+        <h3 class="titre">Assistance</h3>
+        <ul>
+            <li>
+                <p class="lien"><a href="#">Centre d'aide</a></p>
+            </li>
+            <li>
+                <p class="lien"><a href="#">Nous contacter</a></p>
+            </li>
+        </ul>
+    </div>
+ 
+
+</footer>  
 </div>
 </body>
 
