--- a/index.html
+++ b/index.html
@@ -109,14 +109,14 @@
  <!-- Hébergements-->
  <section id="#Hébergements" class="hebergement">
   <div class="marseille">
-      <div class="container">
+      <div class="logementMarseille">
           <h2 class="titre2">Hébergements à Marseille</h2>
-          <div class="liste">
-              <a href="#">
+          <div class="exempleLogement">
+              <a class="exempleLogementLien" href="#">
                   <article class="article">
-                      <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="auberge La Canebiere" title="Auberge La Canebière" class="photo">
+                      <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Chambre lit superposé" title="Auberge La Canebière" class="photo">
                       <div class="contenue">
-                          <h3 class="titre3">Auberge La Canebière</h3>
+                          <h3 class="nomHotel">Auberge La Canebière</h3>
                           <p class="paragraphe">Nuit à partir de <strong> 25 €</strong></p>
                           <div class="etoile">
                               <i class="fas fa-star icon" data-active="true"></i>
@@ -130,9 +130,9 @@
               </a>
               <a href="#">
                   <article class="article">
-                      <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="hotel du port" title="Hôtel du port" class="photo">
+                      <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Chambre deux lits" title="Hôtel du port" class="photo">
                       <div class="contenue">
-                          <h3 class="titre3">Hôtel du port</h3>
+                          <h3 class="nomHotel">Hôtel du port</h3>
                           <p class="paragraphe">Nuit à partir de <strong> 52 €</strong></p>
                           <div class="etoile">
                               <i class="fas fa-star icon" data-active="true"></i>
@@ -146,9 +146,9 @@
               </a>
               <a href="#">
                   <article class="article">
-                      <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="hotel Les mouettes" title="Hôtel Les mouettes" class="photo">
+                      <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Chambre mirroir" title="Hôtel Les mouettes" class="photo">
                       <div class="contenue">
-                          <h3 class="titre3">Hôtel Les mouettes</h3>
+                          <h3 class="nomHotel">Hôtel Les mouettes</h3>
                           <p class="paragraphe">Nuit à partir de <strong> 76 €</strong></p>
                           <div class="etoile">
                               <i class="fas fa-star icon" data-active="true"></i>
@@ -162,9 +162,9 @@
               </a>
               <a href="#">
                   <article class="article">
-                      <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="hotel de la mer" title="Hôtel de la mer" class="photo">
+                      <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hotel Bleu" title="Hôtel de la mer" class="photo">
                       <div class="contenue">
-                          <h3 class="titre3">Hôtel de la mer</h3>
+                          <h3 class="nomHotel">Hôtel de la mer</h3>
                           <p class="paragraphe">Nuit à partir de <strong> 46 €</strong></p>
                           <div class="etoile">
                               <i class="fas fa-star icon" data-active="true"></i>
@@ -178,9 +178,9 @@
               </a>
               <a href="#">
                   <article class="article">
-                      <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="auberge le panier" title="Auberge Le Panier" class="photo">
+                      <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Chambre Auberge" title="Auberge Le Panier" class="photo">
                       <div class="contenue">
-                          <h3 class="titre3">Auberge Le Panier</h3>
+                          <h3 class="nomHotel">Auberge Le Panier</h3>
                           <p class="paragraphe">Nuit à partir de <strong> 23 €</strong></p>
                           <div class="etoile">
                               <i class="fas fa-star icon" data-active="true"></i>
@@ -194,9 +194,9 @@
               </a>
               <a href="#">
                   <article class="article">
-                      <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="hotel chez amina" title="Hôtel Chez Amina" class="photo">
+                      <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Chambre TV" title="Hôtel Chez Amina" class="photo">
                       <div class="contenue">
-                          <h3 class="titre3">Hôtel Chez Amina</h3>
+                          <h3 class="nomHotel">Hôtel Chez Amina</h3>
                           <p class="paragraphe">Nuit à partir de <strong> 96 €</strong></p>
                           <div class="etoile">
                               <i class="fas fa-star icon" data-active="true"></i>
@@ -212,6 +212,8 @@
           <h4 class="afficher"alt="cliquez pour en afficher plus" title="Cliquez pour en afficher plus">Afficher plus</h4>
       </div> 
   </div>
+
+  <!-- Populaire --> 
   <section class="populaire">
       <div class="container">
           <div class="icone">
@@ -220,7 +222,7 @@
           <div class="liste">
               <a href="#">
                   <article class="article">
-                      <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="hotel Le soleil du matin" title="Hôtel Le soleil du matin" class="photo">
+                      <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hotel Vert" title="Hôtel Le soleil du matin" class="photo">
                       <div class="carton">
                           <div class="contenue">
                               <h3 class="titre3">Hôtel Le soleil du matin</h3>
@@ -240,7 +242,7 @@
              
               <a href="#">
                   <article class="article">
-                      <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="chambres d’hôtes au cœur de l’eau" title="Chambres d’hôtes Au cœur de l’eau" class="photo">
+                      <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Chambre Grand espace" title="Chambres d’hôtes Au cœur de l’eau" class="photo">
                       <div class="carton">
                           <div class="contenue">
                               <h3 class="titre3">Chambres d’hôtes Au cœur de l’eau</h3>
@@ -258,7 +260,7 @@
               </a>
               <a href="#">
                   <article class="article">
-                      <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="hotel bleu et blanc" title="Hôtel Bleu et Blanc" class="photo">
+                      <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Chambre tete de lit marron" title="Hôtel Bleu et Blanc" class="photo">
                       <div class="carton">
                           <div class="contenue">
                               <h3 class="titre3">Hôtel Bleu et Blanc</h3>
