--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 <!-- Body --> 
    
  <!-- Hébergements-->
- <section id="#Hébergements" class="hebergement">
+ <section id="Hébergements" class="hebergement">
   <div class="marseille">
       <div class="container">
           <h2 class="nomPart">Hébergements à Marseille</h2>
@@ -286,13 +286,66 @@
 
 
 <!-- Activités-->      
-      <section class="Activités" id="Activités">  
-            <h2 id="#Activités">Activités à Marseille</h2>
-      
-      
+      <section class="activités" id="Activités">  
+            <h2 class="nomPart" id="#Activités">Activités à Marseille</h2>
+            <div class="liste">
+                <a href="#">
+                    <article class="article">
+                        <img src="Images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux-Port" title="Vieux-Port" class="image">
+                        <div class="contenu">
+                            <h3 class="nomActivité">Vieux-Port</h3>
+                        </div>
+                    </article>
+                </a>
+            </div>
+            <div class="liste">
+                <a href="#">
+                    <article class="article">
+                        <img src="Images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues" title="Fort de Pomègues" class="image">
+                        <div class="contenu">
+                            <h3 class="nomActivité">Fort de Pomègues</h3>
+                        </div>
+                    </article>
+                </a>
+            </div><div class="liste">
+                <a href="#">
+                    <article class="article">
+                        <img src="Images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Iles du Frioul" title="Iles du Frioul" class="image">
+                        <div class="contenu">
+                            <h3 class="nomActivité">Iles du Frioul</h3>
+                        </div>
+                    </article>
+                </a>
+            </div><div class="liste">
+                <a href="#">
+                    <article class="article">
+                        <img src="Images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Port National des Calanques" title="Port National des Calanques" class="image">
+                        <div class="contenu">
+                            <h3 class="nomActivité">Port National des Calanques</h3>
+                        </div>
+                    </article>
+                </a>
+            </div><div class="liste">
+                <a href="#">
+                    <article class="article">
+                        <img src="Images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre Dame de la Garde" title="Notre Dame de la Garde" class="image">
+                        <div class="contenu">
+                            <h3 class="nomActivité">Notre Dame de la Garde</h3>
+                        </div>
+                    </article>
+                </a>
+            </div><div class="liste">
+                <a href="#">
+                    <article class="article">
+                        <img src="Images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc Longchamp" title="Parc Longchamp" class="image">
+                        <div class="contenu">
+                            <h3 class="nomActivité">Parc Longchamp</h3>
+                        </div>
+                    </article>
+                </a>
+            </div>
         </section>
 
-   
 
 <!-- Footer-->
 <footer class="footer">
