--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-  <html>
+<html lang="fr">
   <head> 
   <title> Projet Booki </title>
       <script src="https://kit.fontawesome.com/f2e3363b96.js" crossorigin="anonymous"></script>
@@ -14,18 +14,18 @@
 <!-- HEADER -->
     <header class="header">
       <section class="bookiDivLogo">
-            <image class="bookiLogo" src="Images/logo/Booki@3x.png" alt="Logo Booki" />
+            <img class="bookiLogo" src="Images/logo/Booki@3x.png" alt="Logo Booki"/>
       </section>
       <div>
         <nav class="headerHostAct">
           <div class="menuContainer">
             <div>
-              <a class="headerHostActButton" href="#Hébergements">Hébergement</a>
+              <a class="headerHostActBouton" href="#Hébergements">Hébergement</a>
             </div>
           </div>
           <div class="menuContainer">
             <div>
-              <a class="headerHostActButton" href="#Activités">Activités</a>
+              <a class="headerHostActBouton" href="#Activités">Activités</a>
             </div>
           </div>
         </nav>
@@ -50,11 +50,11 @@
                       
         <input class="searchtext" type="search" placeholder="Marseille, France"/>
 
-          <button class="searchbutton">
-            <div class="searchbuttonText">
-              <span class="searchbutton">Rechercher</span>
+          <button class="searchBouton">
+            <div class="searchBoutonText">
+              <span class="searchBouton">Rechercher</span>
             </div>
-            <div class="searchbuttonIcon">
+            <div class="searchBoutonIcon">
               <i class="searchFormSubmitinputIcon fas fa-search"></i>
             </div>
           </button>
@@ -69,7 +69,7 @@
 
           <div class="searchFiltersFilter">
             <div class="searchFiltersFilterIcon">
-              <i class="fa-solid fa-money-bill-wave"style="color:#0065FC"></i>
+              <i class="fa-solid fa-money-bill-wave" style="color:#0065FC"></i>
             </div>
               <span class="searchFiltersFilterTitle">Économique</span>
           </div>
@@ -101,7 +101,7 @@
 <!-- Text Info -->      
       <section class="textInfo">
           <div class="TextInfoIcon">
-            <i class="fa-solid fa-circle-info" style="color:#0065FC"></i> Plus de 500 logements sont disponibles dans cette ville</i>
+            <i class="fa-solid fa-circle-info" style="color:#0065FC"></i> Plus de 500 logements sont disponibles dans cette ville
           </div>     
       </section>
         
@@ -287,73 +287,74 @@
 
 
 <!-- Activités-->      
-      <section class="activités" id="Activités">  
-            <h2 class="nomPart" id="#Activités">Activités à Marseille</h2>
+    <section class="activités" id="Activités">  
+        <h2 class="nomPart" id="#Activités">Activités à Marseille</h2>
             <div class="classement">
                 <div class="classement1">
-                <a href="#">
-                    <article class="article">
+                    <a href="#">
+                        <article class="article">
                         <img src="Images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux-Port" title="Vieux-Port" class="image">
                         <div class="contenu">
                             <h3 class="nomActivité">Vieux-Port</h3>
                         </div>
-                    </article>
-                </a>
+                        </article>
+                    </a>
                 </div>
                 <div class="classement2">
-                    <div class="classement2-1">
-                <a href="#">
-                    <article class="article">
+                <div class="classement2-1">
+                    <a href="#">
+                        <article class="article">
                         <img src="Images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues" title="Fort de Pomègues" class="image">
                         <div class="contenu">
                             <h3 class="nomActivité">Fort de Pomègues</h3>
                         </div>
-                    </article>
-                </a>
-                    </div>
-                    <div class="classement2-2">
-                <a href="#">
-                    <article class="article">
+                        </article>
+                    </a>
+                </div>
+                <div class="classement2-2">
+                    <a href="#">
+                        <article class="article">
                         <img src="Images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Iles du Frioul" title="Iles du Frioul" class="image">
                         <div class="contenu">
                             <h3 class="nomActivité">Iles du Frioul</h3>
                         </div>
-                    </article>
-                </a>
-            </div>
-            </div>
+                        </article>
+                    </a>
+                </div>
+                </div>
                 <div class="classement3">
-                <a href="#">
-                    <article class="article">
+                    <a href="#">
+                        <article class="article">
                         <img src="Images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Port National des Calanques" title="Port National des Calanques" class="image">
                         <div class="contenu">
                             <h3 class="nomActivité">Port National des Calanques</h3>
                         </div>
-                    </article>
-                </a>
-            </div>
+                        </article>
+                    </a>
+                </div>
                 <div class="classement4">
-                    <div class="classement4-1">
-                <a href="#">
+                <div class="classement4-1">
+                    <a href="#">
                     <article class="article">
                         <img src="Images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre Dame de la Garde" title="Notre Dame de la Garde" class="image">
                         <div class="contenu">
                             <h3 class="nomActivité">Notre Dame de la Garde</h3>
                         </div>
                     </article>
-                </a>
-            </div>
-            <div class="classement4-2">
-                <a href="#">
+                    </a>
+                </div>
+                <div class="classement4-2">
+                    <a href="#">
                     <article class="article">
                         <img src="Images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc Longchamp" title="Parc Longchamp" class="image">
                         <div class="contenu">
                             <h3 class="nomActivité">Parc Longchamp</h3>
                         </div>
                     </article>
-                </a>
-            </div>
-            </div>
+                    </a>
+                </div>
+                </div>
+            </div>    
         </section>
 
 
