--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           <div class="liste">
               <a href="#">
                   <article class="article">
-                      <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="auberge La Canebiere" title="Auberge La Canebière" class="image">
+                      <img src="Images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="auberge La Canebiere" title="Auberge La Canebière" class="image">
                       <div class="contenu">
                           <h3 class="nomLogement">Auberge La Canebière</h3>
                           <p class="paragraphe">Nuit à partir de <strong> 25 €</strong></p>
@@ -131,7 +131,7 @@
               </a>
               <a href="#">
                   <article class="article">
-                      <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="hotel du port" title="Hôtel du port" class="image">
+                      <img src="Images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="hotel du port" title="Hôtel du port" class="image">
                       <div class="contenu">
                           <h3 class="nomLogement">Hôtel du port</h3>
                           <p class="paragraphe">Nuit à partir de <strong> 52 €</strong></p>
@@ -147,7 +147,7 @@
               </a>
               <a href="#">
                   <article class="article">
-                      <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="hotel Les mouettes" title="Hôtel Les mouettes" class="image">
+                      <img src="Images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="hotel Les mouettes" title="Hôtel Les mouettes" class="image">
                       <div class="contenu">
                           <h3 class="nomLogement">Hôtel Les mouettes</h3>
                           <p class="paragraphe">Nuit à partir de <strong> 76 €</strong></p>
@@ -163,7 +163,7 @@
               </a>
               <a href="#">
                   <article class="article">
-                      <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="hotel de la mer" title="Hôtel de la mer" class="image">
+                      <img src="Images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="hotel de la mer" title="Hôtel de la mer" class="image">
                       <div class="contenu">
                           <h3 class="nomLogement">Hôtel de la mer</h3>
                           <p class="paragraphe">Nuit à partir de <strong> 46 €</strong></p>
@@ -179,7 +179,7 @@
               </a>
               <a href="#">
                   <article class="article">
-                      <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="auberge le panier" title="Auberge Le Panier" class="image">
+                      <img src="Images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="auberge le panier" title="Auberge Le Panier" class="image">
                       <div class="contenu">
                           <h3 class="nomLogement">Auberge Le Panier</h3>
                           <p class="paragraphe">Nuit à partir de <strong> 23 €</strong></p>
@@ -195,7 +195,7 @@
               </a>
               <a href="#">
                   <article class="article">
-                      <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="hotel chez amina" title="Hôtel Chez Amina" class="image">
+                      <img src="Images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="hotel chez amina" title="Hôtel Chez Amina" class="image">
                       <div class="contenu">
                           <h3 class="nomLogement">Hôtel Chez Amina</h3>
                           <p class="paragraphe">Nuit à partir de <strong> 96 €</strong></p>
@@ -225,7 +225,7 @@
           <div class="liste">
               <a href="#">
                   <article class="article">
-                      <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="hotel Le soleil du matin" title="Hôtel Le soleil du matin" class="image">
+                      <img src="Images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="hotel Le soleil du matin" title="Hôtel Le soleil du matin" class="image">
                       <div class="carton">
                           <div class="contenu">
                               <h3 class="nomLogement">Hôtel Le soleil du matin</h3>
@@ -245,7 +245,7 @@
              
               <a href="#">
                   <article class="article">
-                      <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="chambres d’hôtes au cœur de l’eau" title="Chambres d’hôtes Au cœur de l’eau" class="image">
+                      <img src="Images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="chambres d’hôtes au cœur de l’eau" title="Chambres d’hôtes Au cœur de l’eau" class="image">
                       <div class="carton">
                           <div class="contenu">
                               <h3 class="nomLogement">Chambres d’hôtes Au cœur de l’eau</h3>
@@ -263,7 +263,7 @@
               </a>
               <a href="#">
                   <article class="article">
-                      <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="hotel bleu et blanc" title="Hôtel Bleu et Blanc" class="image">
+                      <img src="Images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="hotel bleu et blanc" title="Hôtel Bleu et Blanc" class="image">
                       <div class="carton">
                           <div class="contenu">
                               <h3 class="nomLogement">Hôtel Bleu et Blanc</h3>
@@ -290,7 +290,7 @@
     <section class="activités" id="Activités">  
         <h2 class="nomPart" id="#Activités">Activités à Marseille</h2>
             <div class="classement">
-                <div class="classement1">
+                <div class="classement1 articleContainer">
                     <a href="#">
                         <article class="article">
                         <img src="Images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux-Port" title="Vieux-Port" class="image">
@@ -301,7 +301,7 @@
                     </a>
                 </div>
                 <div class="classement2">
-                <div class="classement2-1">
+                <div class="classement2-1 articleContainer">
                     <a href="#">
                         <article class="article">
                         <img src="Images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues" title="Fort de Pomègues" class="image">
@@ -311,7 +311,7 @@
                         </article>
                     </a>
                 </div>
-                <div class="classement2-2">
+                <div class="classement2-2 articleContainer">
                     <a href="#">
                         <article class="article">
                         <img src="Images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Iles du Frioul" title="Iles du Frioul" class="image">
@@ -322,7 +322,7 @@
                     </a>
                 </div>
                 </div>
-                <div class="classement3">
+                <div class="classement3 articleContainer">
                     <a href="#">
                         <article class="article">
                         <img src="Images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Port National des Calanques" title="Port National des Calanques" class="image">
@@ -333,7 +333,7 @@
                     </a>
                 </div>
                 <div class="classement4">
-                <div class="classement4-1">
+                <div class="classement4-1 articleContainer">
                     <a href="#">
                     <article class="article">
                         <img src="Images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre Dame de la Garde" title="Notre Dame de la Garde" class="image">
@@ -343,7 +343,7 @@
                     </article>
                     </a>
                 </div>
-                <div class="classement4-2">
+                <div class="classement4-2 articleContainer">
                     <a href="#">
                     <article class="article">
                         <img src="Images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc Longchamp" title="Parc Longchamp" class="image">
@@ -362,7 +362,7 @@
 <footer class="footer">
 
     <div class="colonne">
-        <h3 class="titre">A propos</h3>
+        <h3 class="titreFooter">A propos</h3>
         <ul>
             <li>
                 <p class="lien"><a href="#">Fonctionnement du site</a></p>
@@ -376,7 +376,7 @@
         </ul>
     </div>
     <div class="colonne">
-        <h3 class="titre">Nos hébergements</h3>
+        <h3 class="titreFooter">Nos hébergements</h3>
         <ul>
             <li>
                 <p class="lien"><a href="#">Charte qualité</a></p>
@@ -387,7 +387,7 @@
         </ul>
     </div>
     <div class="colonne">
-        <h3 class="titre">Assistance</h3>
+        <h3 class="titreFooter">Assistance</h3>
         <ul>
             <li>
                 <p class="lien"><a href="#">Centre d'aide</a></p>
